Update to change the login screen

--- a/public/chat.css
+++ b/public/chat.css
@@ -1,94 +1,4 @@
-.no-close .ui-dialog-titlebar-close {
-	display: none;
-}
-#enabled{
-  display: none;
-}
-body {
-  background-color: #2E4053;
-  color: white;
-}
-button {
-  text-align: center;
-  color: red;
-  background-color: black;
-}
-.img1 {
-  width: 166.666666667px;
-  height: 116.666666667px;
-}
-.img2 {
-  width: 400px;
-  height: 301px;
-}
-tag {
-  background-color: grey
-}
-h1 {
-  font-family: Permanent Marker;
-}
-h3 {
-  font-family: Abril Fatface;
-}
-.timePosted {
-display: none;
-}
-
-.ab {
-float: right;
-}
-.logo {
-width: 65px;
-height: 65px;
-}
-.sendLogo {
-width: 50px;
-height: 50px;
-color: white;
-background-color: white;
-}
-.sendLogoBase {
-background-color: white;
-}
-.head {
-font-family: Permanent Marker;
-font-size: 20px;
-}
-.messageBox {
-font-family: Abhaya Libre;
-font-size: 20px;
-}
-.start:hover {
-  background-color: black!important;
-  color: white!important;
-  cursor: default!important;
-}
-.messageBtn{
-  font-size: 40px;
-}
-.postBtn{
-  background-color: white;
-  color: black;
-}
-.messagePostedBy{
-display: none;
-}
-
-.postAvatar{
-float: left!important;
-text-align: left!important;
-border-radius: 100px;
-height: 100px!important;
-}
-
-.chat{
-border-radius: 40px!important;
-}
-
-.senderHeader{
-  font-family: Alfa Slab One;
-}
-
-.hidden{
+.head,h1{font-family:Permanent Marker}.postBtn,.sendLogo,.sendLogoBase{background-color:#fff}#enabled,.hidden,.messagePostedBy,.no-close .ui-dialog-titlebar-close,.timePosted{display:none}body{background-color:#2e4053;color:#fff}button{text-align:center;color:red;background-color:#000}.img1{width:166.666666667px;height:116.666666667px}.img2{width:400px;height:301px}tag{background-color:grey}h3{font-family:Abril Fatface}.ab{float:right}.logo{width:65px;height:65px}.sendLogo{width:50px;height:50px;color:#fff}.head{font-size:20px}.messageBox{font-family:Abhaya Libre;font-size:20px}.start:hover{background-color:#000!important;color:#fff!important;cursor:default!important}.messageBtn{font-size:40px}.postBtn{color:#000}.postAvatar{float:left!important;text-align:left!important;border-radius:100px;height:100px!important}.chat{border-radius:40px!important}.senderHeader{font-family:Alfa Slab One}
+.hide{
   display: none;
 }
